# ParticleSystem2D

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  particle_kernel.cl
Libft/: Makefile  README.md
Libft/include/: get_next_line.h  libft.h
Libft/src/: ft_abs.c  ft_atoi.c  ft_bzero.c  ft_clear_double_pointer.c  ft_fswap.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isstn.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstnormdel.c  ft_lstnormdelone.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_sort_bubl.c  ft_strcat.c  ft_strchr.c  (+31 more)
include/: define.h  particale_system.h
src/: cl_processing.c  init_cl.c  init_sdl.c  main.c  main_and_event_init.c  particle_init.c  particle_kernel.cl
